Add spotless for formatting